# activecpp

./: CMakeLists.txt  LICENSE.txt  NOTICE  README.md  mkdocs.yaml  posix.mk  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  clang.yml  docs.yaml  gcc.yml  ubuntu.yml
cmake/: config.cmake.in  pkg-config.pc.in  samiralavi_activecppConfigVersion.cmake.in
containers/: Dockerfile
docs/: active-object-pattern.md  index.md
examples/: CMakeLists.txt
examples/ActorThread/HelloWorld/: GNUmakefile  Makefile
examples/ActorThread/HelloWorld/src/: Application.cpp  Application.h  World.cpp  World.h
examples/ActorThread/MyLib/: GNUmakefile  Makefile
examples/ActorThread/MyLib/include/MyLib/: MyLib.h  Printer.h
examples/ActorThread/MyLib/src/: MyLib.cpp
examples/ActorThread/MyLibClient/: GNUmakefile  Makefile
examples/ActorThread/MyLibClient/src/: Application.cpp  Application.h
examples/ActorThread/Test/src/: Application.cpp  Application.h
examples/HelloWorld/: Application.h  CMakeLists.txt  Printer.h  World.h
examples/MyLib/: CMakeLists.txt  MyLib.cpp
examples/MyLib/include/: MyLib.h  Printer.h
examples/MyLibClient/: Application.cpp  Application.h  CMakeLists.txt
include/activecpp/: ActiveObject.h  ActorThread.hpp  String.hpp
include/samiralavi/: activecpp.h
main/: 404.html  index.html  sitemap.xml
main/active-object-pattern/: index.html
main/search/: search_index.json
tests/: Application.h  CMakeLists.txt
