[tool.poetry]
package-mode = false
description = ""
authors = ["Seyed Amir Alavi <seydamir@gmail.com>"]
readme = "README.md"
license = "BSL-1.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5"
mike = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
